--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@
     <div class="container">
         <div class="row redes-footer wow bounceIn">
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 padding-off insta-footer">
-                <a href="#" target="_blank">
+                <a href="https://www.instagram.com/warnermediaforbrands_brasil/" target="_blank">
                     <img src="assets/images/insta-footer.png" class="img-responsive center-block">
                 </a>
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 padding-off face-footer">
-                <a href="#" target="_blank">
+                <a href="https://www.facebook.com/warnermediaforbrandsbrasil/" target="_blank">
                     <img src="assets/images/face-footer.png" class="img-responsive center-block">
                 </a>
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 padding-off linkedin-footer">
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/showcase/warnermediaforbrandsbrasil/" target="_blank">
                     <img src="assets/images/linkedin-footer.png" class="img-responsive center-block">
                 </a>
             </div>
